--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "defu": "^6.1.4",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "fast-glob": "^3.3.2",
     "h3": "^1.11.1",
     "json-schema": "^0.4.0",
     "jtd": "^0.1.1",
@@ -80,6 +81,7 @@
     "esno": "^4.0.0",
     "json-schema-migrate": "^2.0.0",
     "lint-staged": "^15.2.2",
+    "quicktype-core": "^23.0.105",
     "rollup": "^4.12.0",
     "simple-git-hooks": "^2.9.0",
     "typescript": "^5.3.3",
