--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   devcontainer:
-    image: gitea.local/sozdev/devcontainer-ts
+    image: mcr.microsoft.com/devcontainers/typescript-node
     restart: unless-stopped
     command: tail -f /dev/null
     environment:
