--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["./src/**/*", "./types/**/*"]
+  "include": ["./src/**/*", "src/types/**/*"]
 }
