--- a/package.json
+++ b/package.json
@@ -37,14 +37,16 @@
     "dist"
   ],
   "scripts": {
-    "dev": "yarn esno src/index.ts",
-    "typecheck": "yarn tsc --noEmit",
     "build": "cross-env NODE_OPTIONS=\"--no-warnings\" yarn rollup --configPlugin esbuild --config rollup.config.ts",
     "start": "cross-env NODE_OPTIONS=\"--no-warnings --experimental-modules --experimental-import-meta-resolve\" yarn node dist/esm/index.mjs",
     "schema": "yarn typescript-json-schema --out schema.json --skipLibCheck src/index.ts Options",
+    "typecheck": "yarn tsc --noEmit",
     "release": "yarn npm publish",
-    "lint": "yarn eslint --config eslint.config.js",
     "clean": "yarn exec rm -rf dist",
+    "lint": "yarn eslint --config eslint.config.js",
+    "server": "yarn esno --watch src/server",
+    "client": "yarn esno --watch src/client",
+    "workers": "yarn esno --watch src/workers",
     "quicktype": "yarn esno scripts/quicktype.ts"
   },
   "dependencies": {
@@ -62,11 +64,8 @@
     "cross-env": "7.0.3",
     "defu": "^6.1.4",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
     "fast-glob": "^3.3.2",
     "h3": "^1.11.1",
-    "json-schema": "^0.4.0",
-    "jtd": "^0.1.1",
     "listhen": "^1.7.2",
     "nanoid": "^5.0.6",
     "redis": "^4.6.13",
@@ -76,7 +75,6 @@
   "devDependencies": {
     "@sozdev/eslint-config": "^0.0.11",
     "@sozdev/rollup-build": "^0.0.10",
-    "@types/express": "^4.17.21",
     "@types/ws": "^8.5.10",
     "eslint": "^8.57.0",
     "esno": "^4.0.0",
