--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig.json",
+
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["ESNext", "DOM"],
@@ -26,5 +27,5 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*", "lib/**/*", "scripts/**/*", "types/**/*"]
+  "include": ["types/**/*", "src/**/*", "lib/**/*", "scripts/**/*"]
 }
