--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "@sozdev/typescript-template",
   "type": "module",
   "version": "0.0.9",
-  "packageManager": "yarn@4.1.0",
+  "packageManager": "yarn@4.1.1",
   "description": "Rollup build script",
   "author": "Alexander Semyenov <semyenov@hotmail.com>",
   "license": "MIT",
@@ -44,22 +44,22 @@
     "release": "yarn npm publish",
     "clean": "yarn exec rm -rf dist",
     "lint": "yarn eslint --config eslint.config.js",
-    "server": "yarn esno --watch src/server",
-    "client": "yarn esno --watch src/client",
-    "workers": "yarn esno --watch src/workers",
-    "quicktype": "yarn esno scripts/quicktype.ts"
+    "server": "yarn tsx --watch src/server",
+    "client": "yarn tsx --watch src/client",
+    "workers": "yarn tsx --watch src/workers",
+    "quicktype": "yarn tsx scripts/quicktype.ts"
   },
   "dependencies": {
     "@antfu/utils": "^0.7.7",
-    "@apidevtools/json-schema-ref-parser": "^11.1.0",
+    "@apidevtools/json-schema-ref-parser": "^11.5.4",
     "@exodus/schemasafe": "^1.3.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
-    "@trpc/client": "^10.45.1",
-    "@trpc/server": "^10.45.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "ajv": "^8.12.0",
     "ajv-i18n": "^4.2.0",
-    "bullmq": "^5.4.1",
-    "c12": "^1.9.0",
+    "bullmq": "^5.4.2",
+    "c12": "^1.10.0",
     "consola": "^3.2.3",
     "cross-env": "7.0.3",
     "defu": "^6.1.4",
@@ -67,9 +67,12 @@
     "fast-glob": "^3.3.2",
     "h3": "^1.11.1",
     "listhen": "^1.7.2",
+    "mongodb": "^6.5.0",
     "nanoid": "^5.0.6",
+    "radash": "^12.1.0",
     "redis": "^4.6.13",
     "ts-pattern": "^5.0.8",
+    "tsx": "^4.7.1",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
@@ -78,13 +81,12 @@
     "@sozdev/rollup-build": "^0.0.10",
     "@types/ws": "^8.5.10",
     "eslint": "^8.57.0",
-    "esno": "^4.0.0",
     "json-schema-migrate": "^2.0.0",
     "lint-staged": "^15.2.2",
-    "quicktype-core": "^23.0.105",
-    "rollup": "^4.12.0",
-    "simple-git-hooks": "^2.9.0",
-    "typescript": "^5.3.3",
+    "quicktype-core": "^23.0.106",
+    "rollup": "^4.13.0",
+    "simple-git-hooks": "^2.10.0",
+    "typescript": "^5.4.2",
     "typescript-json-schema": "0.63.0"
   },
   "simple-git-hooks": {
