--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "dotenv": "^16.4.5",
     "fast-glob": "^3.3.2",
     "h3": "^1.11.1",
+    "jose": "^5.2.3",
     "listhen": "^1.7.2",
     "nanoid": "^5.0.6",
     "redis": "^4.6.13",
