added mongodb, ws send event

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -69,7 +69,8 @@
         "yatki.vscode-surround",
         "yoavbls.pretty-ts-errors",
         "Yseop.vscode-yseopml",
-        "zardoy.ts-essential-plugins"
+        "zardoy.ts-essential-plugins",
+        "mongodb.mongodb-vscode"
       ]
     }
   }
