--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -19,16 +19,19 @@
     "christian-kohler.path-intellisense",
     "Codeium.codeium",
     "cpylua.language-postcss",
+    "cweijan.vscode-redis-client",
     "dbaeumer.vscode-eslint",
     "eamodio.gitlens",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
+    "fagnercarvalho.redis-lsp",
     "formulahendry.auto-rename-tag",
     "foxundermoon.shell-format",
     "helixquar.randomeverything",
     "heybourn.headwind",
     "howardzuo.vscode-npm-dependency",
     "IBM.output-colorizer",
+    "idered.npm",
     "kisstkondoros.vscode-codemetrics",
     "lacroixdavid1.vscode-format-context-menu",
     "lokalise.i18n-ally",
@@ -40,6 +43,7 @@
     "micnil.vscode-checkpoints",
     "mikestead.dotenv",
     "mkxml.vscode-filesize",
+    "mongodb.mongodb-vscode",
     "ms-vscode.vscode-js-profile-flame",
     "Nuxt.mdc",
     "oderwat.indent-rainbow",
