--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "nanoid": "^5.0.6",
     "radash": "^12.1.0",
     "redis": "^4.6.13",
+    "superjson": "^2.2.1",
     "ts-pattern": "^5.0.8",
     "tsx": "^4.7.1",
     "ws": "^8.16.0",
