--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,26 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig.json",
-
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "baseUrl": ".",
     "rootDir": ".",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "noResolve": false,
     "paths": {
-      "~/*": ["src/*"],
-      "@/*": ["lib/*"],
-      "types/*": ["types/*"]
+      "~/*": [
+        "src/*"
+      ],
+      "@/*": [
+        "lib/*"
+      ],
+      "types/*": [
+        "types/*"
+      ]
     },
     "resolveJsonModule": true,
     "resolvePackageJsonExports": true,
@@ -28,5 +36,10 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["types/**/*", "src/**/*", "lib/**/*", "scripts/**/*"]
+  "include": [
+    "types/**/*",
+    "src/**/*",
+    "lib/**/*",
+    "scripts/**/*"
+  ]
 }
