--- a/package.json
+++ b/package.json
@@ -53,32 +53,38 @@
   "dependencies": {
     "@antfu/utils": "^0.7.7",
     "@apidevtools/json-schema-ref-parser": "^11.5.4",
+    "@automerge/automerge": "^2.2.0-rc1",
     "@exodus/schemasafe": "^1.3.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
-    "ajv-formats": "^2.1.1",
+    "ajv-formats": "^3.0.1",
     "ajv-i18n": "^4.2.0",
     "ajv-keywords": "^5.1.0",
-    "bullmq": "^5.4.2",
+    "bullmq": "^5.5.1",
     "c12": "^1.10.0",
+    "chalk": "^5.3.0",
     "consola": "^3.2.3",
     "cross-env": "7.0.3",
     "defu": "^6.1.4",
     "dotenv": "^16.4.5",
     "fast-glob": "^3.3.2",
+    "gun": "^0.2020.1239",
+    "gun-flint": "^0.0.28",
+    "gun-mongo": "^0.1.2",
+    "gun-mongo-key": "^0.1.4",
     "h3": "^1.11.1",
     "jose": "^5.2.3",
     "listhen": "^1.7.2",
     "mongodb": "^6.5.0",
-    "nanoid": "^5.0.6",
+    "nanoid": "^5.0.7",
     "radash": "^12.1.0",
     "redis": "^4.6.13",
     "superjson": "^2.2.1",
-    "ts-pattern": "^5.0.8",
-    "tsx": "^4.7.1",
+    "ts-pattern": "^5.1.0",
+    "tsx": "^4.7.2",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
@@ -89,10 +95,10 @@
     "eslint": "^8.57.0",
     "json-schema-migrate": "^2.0.0",
     "lint-staged": "^15.2.2",
-    "quicktype-core": "^23.0.106",
-    "rollup": "^4.13.0",
-    "simple-git-hooks": "^2.10.0",
-    "typescript": "^5.4.2",
+    "quicktype-core": "^23.0.115",
+    "rollup": "^4.14.0",
+    "simple-git-hooks": "^2.11.1",
+    "typescript": "^5.4.4",
     "typescript-json-schema": "0.63.0"
   },
   "simple-git-hooks": {
