--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@apidevtools/json-schema-ref-parser": "^11.5.4",
     "@automerge/automerge": "^2.2.0-rc1",
     "@exodus/schemasafe": "^1.3.0",
+    "@hyperswarm/secret-stream": "^6.4.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
@@ -78,13 +79,18 @@
     "h3": "^1.11.1",
     "jose": "^5.2.3",
     "listhen": "^1.7.2",
+    "loro-crdt": "^0.14.5",
     "mongodb": "^6.5.0",
     "nanoid": "^5.0.7",
+    "protomux": "^3.6.0",
     "radash": "^12.1.0",
+    "radix-ts": "^1.0.2",
     "redis": "^4.6.13",
     "superjson": "^2.2.1",
     "ts-pattern": "^5.1.0",
     "tsx": "^4.7.2",
+    "udx-native": "^1.9.0",
+    "unstorage": "^1.10.2",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
