--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -17,32 +17,21 @@
   "sideEffects": false,
   "exports": {
     "ajv": {
-      "import": "./src/ajv/index.ts"
-    }
-  },
-  "main": "./dist/cjs/index.cjs",
-  "module": "./dist/esm/index.mjs",
-  "types": "./dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
-      ]
+      "default": "./ajv/index.ts"
     }
   },
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
     "dev": "yarn esno src/index.ts",
     "typecheck": "yarn tsc --noEmit",
     "build": "cross-env NODE_OPTIONS=\"--no-warnings\" yarn rollup --configPlugin esbuild --config rollup.config.ts",
-    "start": "cross-env NODE_OPTIONS=\"--no-warnings --experimental-modules --experimental-import-meta-resolve\" yarn node dist/esm/index.mjs",
+    "start": "cross-env NODE_OPTIONS=\"--no-warnings --experimental-modules --experimental-import-meta-resolve\" yarn node src/esm/index.mjs",
     "schema": "yarn typescript-json-schema --out schema.json --skipLibCheck src/index.ts Options",
     "release": "yarn npm publish",
     "lint": "yarn eslint --config eslint.config.js",
-    "clean": "yarn exec rm -rf dist"
+    "clean": "yarn exec rm -rf src"
   },
   "dependencies": {
     "@rollup/plugin-alias": "^5.0.1",
