--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -82,5 +82,8 @@
     "unstorage": "^1.10.2",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "rollup": "^4.14.0"
   }
 }
