--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -37,7 +37,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" yarn rollup --configPlugin esbuild --config rollup.config.ts",
+    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" yarn rollup --config ./rollup.config.mjs",
     "start": "cross-env NODE_OPTIONS=\"--no-warnings --experimental-modules --experimental-import-meta-resolve\" yarn node dist/esm/index.mjs",
     "schema": "yarn typescript-json-schema --out schema.json --skipLibCheck src/index.ts Options",
     "typecheck": "yarn tsc --noEmit",
@@ -51,29 +51,28 @@
     "generate:keys": "yarn tsx scripts/generate_keys.ts"
   },
   "dependencies": {
-    "@antfu/utils": "^0.7.7",
+    "@antfu/utils": "^0.7.10",
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@regioni/build": "workspace:^",
-    "@regioni/lib": "workspace:^",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
-    "ajv": "^8.12.0",
+    "ajv": "^8.16.0",
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^3.0.1",
     "ajv-i18n": "^4.2.0",
     "ajv-keywords": "^5.1.0",
-    "bullmq": "^5.5.1",
-    "c12": "^1.10.0",
+    "bullmq": "^5.8.2",
+    "c12": "^1.11.1",
     "chalk": "^5.3.0",
     "consola": "^3.2.3",
     "cross-env": "7.0.3",
     "defu": "^6.1.4",
     "dotenv": "^16.4.5",
     "fast-glob": "^3.3.2",
-    "h3": "^1.11.1",
-    "jose": "^5.2.3",
+    "h3": "^1.12.0",
+    "jose": "^5.6.2",
     "listhen": "^1.7.2",
-    "mongodb": "^6.5.0",
+    "mongodb": "^6.8.0",
     "nanoid": "^5.0.7",
     "radix-ts": "^1.0.2",
     "redis": "^4.6.13",
@@ -84,6 +83,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@regioni/lib": "workspace:^",
+    "esbuild": "^0.21.5",
     "rollup": "^4.14.0"
   }
 }
