--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "release": "yarn npm publish",
     "clean": "yarn exec rm -rf dist",
     "lint": "yarn eslint --config eslint.config.js",
-    "server": "yarn tsx --watch src/server",
-    "client": "yarn tsx --watch src/client",
-    "workers": "yarn tsx --watch src/workers",
+    "frontend:dev": "yarn workspace @regioni/nuxt-frontend run dev",
+    "frontend:build": "yarn workspace @regioni/nuxt-frontend run build",
+    "backend:dev": "yarn workspace @regioni/backend dev",
+    "backend:build": "yarn workspace @regioni/backend run build",
+    "packages:build": "yarn workspace @regioni/build run build && yarn workspace",
     "generate:types": "yarn tsx scripts/generate_types.ts",
     "generate:keys": "yarn tsx scripts/generate_keys.ts"
   },
