--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -19,9 +19,9 @@
     "*"
   ],
   "scripts": {
+    "build": "yarn tsc -b",
     "dev": "yarn esno src/index.ts",
     "typecheck": "yarn tsc --noEmit",
-    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" yarn rollup --configPlugin esbuild --config rollup.config.ts",
     "start": "cross-env NODE_OPTIONS=\"--no-warnings --experimental-modules --experimental-import-meta-resolve\" yarn node src/esm/index.mjs",
     "schema": "yarn typescript-json-schema --out schema.json --skipLibCheck src/index.ts Options",
     "release": "yarn npm publish",
