--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -1,6 +1,45 @@
 {
-  "extends": "../../tsconfig.json",
+  "$schema": "https://json.schemastore.org/tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true
-  }
+    "target": "ESNext",
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
+    "baseUrl": ".",
+    "rootDir": "./src/",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "noResolve": false,
+    "paths": {
+      // "~/*": [
+      //   "src/*"
+      // ],
+      "@/*": [
+        "src/*"
+      ],
+      "types/*": [
+        "types/*"
+      ]
+    },
+    "resolveJsonModule": true,
+    "resolvePackageJsonExports": true,
+    "resolvePackageJsonImports": true,
+    "allowJs": true,
+    "strict": true,
+    "declaration": true,
+    "importHelpers": true,
+    "outDir": "dist",
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
+  },
+  "include": [
+    "types/**/*",
+    "src/**/*",
+    "lib/**/*",
+    "scripts/**/*"
+  ]
 }
