--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -37,7 +37,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" yarn rollup --config ./rollup.config.mjs",
+    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" yarn rollup  --config ./rollup.config.mjs",
     "start": "cross-env NODE_OPTIONS=\"--no-warnings --experimental-modules --experimental-import-meta-resolve\" yarn node dist/esm/index.mjs",
     "schema": "yarn typescript-json-schema --out schema.json --skipLibCheck src/index.ts Options",
     "typecheck": "yarn tsc --noEmit",
@@ -90,9 +90,13 @@
   },
   "devDependencies": {
     "@regioni/lib": "workspace:^",
+    "@rollup/plugin-wasm": "^6.2.2",
     "@types/orbitdb__core": "workspace:^",
     "esbuild": "^0.21.5",
     "rollup": "^4.14.0",
-    "tsx": "^4.7.2"
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "tsx": "^4.7.2",
+    "unbuild": "^2.0.0"
   }
 }
