--- a/packages/eslint-config/tsconfig.json
+++ b/packages/eslint-config/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig.json",
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2017",
     "lib": [
       "ESNext",
       "DOM"
@@ -11,17 +11,6 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "noResolve": false,
-    "paths": {
-      "~/*": [
-        "packages/src/*"
-      ],
-      "@/*": [
-        "lib/*"
-      ],
-      "types/*": [
-        "types/*"
-      ]
-    },
     "resolveJsonModule": true,
     "resolvePackageJsonExports": true,
     "resolvePackageJsonImports": true,
@@ -37,11 +26,6 @@
     "skipLibCheck": true
   },
   "include": [
-    "types/**/*",
-    "packages/src/**/*",
-    "tmp/**/*",
-    "lib/**/*",
-    "scripts/**/*",
-    "apps/**/*"
+    "src/**/*"
   ]
 }
