--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -55,48 +55,26 @@
     "@chainsafe/libp2p-gossipsub": "^13.1.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@orbitdb/core": "^2.2.0",
-    "@regioni/build": "workspace:^",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
-    "ajv": "^8.16.0",
-    "ajv-errors": "^3.0.0",
-    "ajv-formats": "^3.0.1",
-    "ajv-i18n": "^4.2.0",
-    "ajv-keywords": "^5.1.0",
     "blockstore-level": "^1.1.8",
-    "bullmq": "^5.8.2",
     "c12": "^1.11.1",
     "chalk": "^5.3.0",
-    "consola": "^3.2.3",
     "cross-env": "7.0.3",
     "defu": "^6.1.4",
     "dotenv": "^16.4.5",
     "fast-glob": "^3.3.2",
     "h3": "^1.12.0",
-    "helia": "^4.2.4",
-    "jose": "^5.6.2",
     "libp2p": "^1.7.0",
     "listhen": "^1.7.2",
-    "mongodb": "^6.8.0",
     "nanoid": "^5.0.7",
-    "radix-ts": "^1.0.2",
-    "redis": "^4.6.13",
-    "superjson": "^2.2.1",
     "ts-pattern": "^5.1.0",
-    "unstorage": "^1.10.2",
-    "winston": "^3.13.0",
-    "ws": "^8.16.0",
-    "zod": "^3.22.4"
+    "unstorage": "^1.10.2"
   },
   "devDependencies": {
+    "@regioni/build": "workspace:^",
     "@regioni/lib": "workspace:^",
-    "@rollup/plugin-wasm": "^6.2.2",
     "@types/orbitdb__core": "workspace:^",
-    "esbuild": "^0.21.5",
-    "rollup": "^4.14.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "tsx": "^4.7.2",
-    "unbuild": "^2.0.0"
+    "tsx": "^4.7.2"
   }
 }
