--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "release": "yarn npm publish",
     "clean": "yarn exec rm -rf dist",
     "lint": "yarn eslint --config eslint.config.js",
-    "frontend:dev": "yarn workspace @regioni/nuxt-frontend run dev",
-    "frontend:build": "yarn workspace @regioni/nuxt-frontend run build",
+    "frontend:dev": "yarn workspace @regioni/frontend run dev",
+    "frontend:build": "yarn workspace @regioni/frontend run build",
     "backend:dev": "yarn workspace @regioni/backend dev",
     "backend:build": "yarn workspace @regioni/backend run build",
     "packages:build": "yarn workspace @regioni/build run build && yarn workspace @regioni/lib run build",
@@ -59,9 +59,6 @@
   "devDependencies": {
     "@regioni/eslint-config": "workspace:^",
     "@regioni/lib": "workspace:^",
-    "@sozdev/eslint-config": "^0.0.11",
-    "@sozdev/rollup-build": "^0.0.10",
-    "@types/ws": "^8.5.10",
     "eslint": "^8.56.5",
     "json-schema-migrate": "^2.0.0",
     "lint-staged": "^15.2.7",
