--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -48,30 +48,10 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "^1.1.1",
-    "consola": "^3.2.3"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config-ts": "^0.43.1",
-    "@antfu/utils": "^0.7.6",
     "@eslint/eslintrc": "^2.1.3",
-    "@rollup/plugin-alias": "^5.0.1",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-sucrase": "^5.0.2",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@types/eslint": "^8.44.7",
-    "@types/eslint__eslintrc": "^2.1.1",
-    "@types/esm": "^3.2.2",
-    "@types/node": "^20.9.0",
-    "@types/rollup-plugin-peer-deps-external": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "@typescript-eslint/utils": "^6.11.0",
-    "@yarnpkg/builder": "^4.0.0",
-    "@yarnpkg/sdks": "^3.0.0",
-    "cross-env": "^7.0.3",
-    "esbuild": "^0.19.5",
     "eslint": "^8.53.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -88,24 +68,24 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "eslint-plugin-vue": "^9.18.1",
     "eslint-plugin-yml": "^1.10.0",
-    "esno": "^4.0.0",
     "jsonc-eslint-parser": "^2.4.0",
-    "lint-staged": "^15.1.0",
-    "rollup": "^4.4.0",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-esbuild": "^6.1.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "simple-git-hooks": "^2.9.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "typescript-json-schema": "0.62.0",
     "vue-eslint-parser": "^9.3.2",
     "yaml-eslint-parser": "^1.2.2"
   },
-  "simple-git-hooks": {
-    "pre-commit": "yarn lint-staged"
-  },
-  "lint-staged": {
-    "./src/**/*.{ts,js,yaml,yml,json,md,mdc,vue}": "yarn lint --fix --"
+  "devDependencies": {
+    "@antfu/eslint-config-ts": "^0.43.1",
+    "@antfu/utils": "^0.7.6",
+    "@regioni/build": "workspace:^",
+    "@types/eslint": "^8.44.7",
+    "@types/eslint__eslintrc": "^2.1.1",
+    "@types/node": "^20.9.0",
+    "@yarnpkg/builder": "^4.0.0",
+    "@yarnpkg/sdks": "^3.0.0",
+    "consola": "^3.2.3",
+    "cross-env": "^7.0.3",
+    "esno": "^4.0.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "typescript-json-schema": "0.62.0"
   }
 }
